--- a/lap3/style.css
+++ b/lap3/style.css
@@ -27,15 +27,16 @@ article{
     width: 100%;
     height: 200px;
     margin: 0 0 10px 0;
+    gap: 1%;
 }
 .item1{
     background-color: #EEEEEE;
     width: 200px;
+    flex-grow: 0;
 }
 .item2{
     background-color: #EEEEEE;
     flex-grow: 1;
-    margin: 0 10px;
 }
 .item3{
     background-color: #EEEEEE;
