--- a/baiOnline_26/3/style.css
+++ b/baiOnline_26/3/style.css
@@ -8,7 +8,7 @@ header{
     justify-content: space-around;
 }
 .header-left{
-    width: 10%;
+    width: 15%;
     height: 100px;
 }
 .header-left img {
@@ -33,25 +33,105 @@ input{
 }
 
 aside{
-    width: 10%;
-    height: auto;
-    background-color: antiquewhite;
+    width: 25%;
+    height: 300px;
     border-radius: 3px;
     border: 1px solid black;
+    min-width: 150px;
 }
 aside ul li{
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 .content {
+    width: 100%;
     display: flex;
+    justify-content: flex-start;
 }
 article {
     display: flex;
-    flex-grow: 1;
-    background-color: aquamarine;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
-
-.item video {
-    width: 25%;
+.item {
+    width: 30%;
+}
+.item video{
+    width: 100%;
+}
+.header-right1{
+    display: none;
+}
+@media all and (max-width: 680px) {
+    .container{
+        width: 100%;
+    }
+    header{
+        display: flex;
+        width: 100%;
+        height: 100px;
+        justify-content: space-around;
+    }
+    .header-left{
+        width: 160px;
+        height: 100px;
+    }
+    .header-left img {
+        height: 100%;
+    }
+    input{
+        height: 25%;
+        flex-grow: 1;
+        margin: auto;
+    }
+    .header-right{
+        width: 20%;
+        display: flex;
+        justify-content: center;
+        display: none;
+    }
+    .header-right1{
+        width: 20%;
+        display: flex;
+        justify-content: center;
+    }
+    .header-right1 img{
+        height: 35%;
+        margin: auto 0;
+    }
+    .header-right p{
+        margin: auto 0;
+    }
+    
+    aside{
+        width: 25%;
+        height: 300px;
+        border-radius: 3px;
+        border: 1px solid black;
+        min-width: 150px;
+    }
+    aside ul li{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    .content {
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+    }
+    article {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    .item {
+        width: 100%;
+        margin-left: 10px;
+    }
+    .item video{
+        width: 100%;
+    }
 }
